<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@color/lavender">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:paddingLeft="75dp"
        android:columnCount="1"
        android:rowCount="3"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_profile" />

                <Button
                    android:id="@+id/profile_button"
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/profile"
                    android:textSize="18sp"
                    app:cornerRadius="30dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            android:gravity="center"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_payments" />

                <Button
                    android:id="@+id/payments_button"
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/payments"
                    android:textSize="18sp"
                    app:cornerRadius="30dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            android:gravity="center"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_issues" />

                <Button
                    android:id="@+id/issues_button"
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/issues"
                    android:textSize="18sp"
                    app:cornerRadius="30dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Add more CardViews as needed -->

    </GridLayout>

</LinearLayout>
